// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commitPrice, with option 1`] = `
Array [
  Array [
    "100000000000000000000",
    123456789,
  ],
]
`;

exports[`commitPrice, without account 1`] = `
Array [
  Array [
    "100000000000000000000",
    123456789,
  ],
]
`;

exports[`commitPrice, without option 1`] = `
Array [
  Array [
    "100000000000000000000",
    123456789,
  ],
]
`;

exports[`commitPrice, wrong env 1`] = `"Wrong Env"`;

exports[`commitPriceRaw 1`] = `
Array [
  Array [
    Array [
      "1000000000000000000",
      2,
    ],
    "0x03ee06f40000000000000000000000000000000000000000000000000de0b6b3a76400000000000000000000000000000000000000000000000000000000000000000002",
    "address",
    "privateKey",
    3,
    4,
    -1,
  ],
]
`;

exports[`getLastPrice 1`] = `
Array [
  Array [],
]
`;

exports[`getLastPrice 2`] = `
Object {
  "price": 1e-16,
  "timestamp": 123456789000,
}
`;

exports[`isStarted 1`] = `Array []`;

exports[`isStarted 2`] = `true`;

exports[`startMagi, with option 1`] = `
Array [
  Array [
    "100000000000000000000",
    123456789,
  ],
]
`;

exports[`startMagi, without account 1`] = `
Array [
  Array [
    "100000000000000000000",
    123456789,
  ],
]
`;

exports[`startMagi, without option 1`] = `
Array [
  Array [
    "100000000000000000000",
    123456789,
  ],
]
`;

exports[`startMagi, wrong env 1`] = `"Wrong Env"`;

exports[`startMagiRaw 1`] = `
Array [
  Array [
    Array [
      "1000000000000000000",
      2,
    ],
    "0x660d6eaf0000000000000000000000000000000000000000000000000de0b6b3a76400000000000000000000000000000000000000000000000000000000000000000002",
    "address",
    "privateKey",
    3,
    4,
    -1,
  ],
]
`;
